[package]
name = "bouncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
ipnetwork = "0.20.0"
mime = "0.3.16"
reqwest = { version = "0.11.14", features = ["stream"] }
serde = { version = "1.0.152", features = ["derive"] }
url = "2.3.1"
validator = { version = "0.16.0", features = ["derive"] }
