[package]
name = "bouncer"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "bouncer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
clap = { version = "4.1.6", features = ["derive", "env"] }
digest = { version = "0.10.6", features = ["mac"] }
futures = "0.3.26"
futures-util = "0.3.26"
hex = "0.4.3"
hmac = "0.12.1"
ipnetwork = "0.20.0"
mime = "0.3.16"
reqwest = { version = "0.11.14", features = ["stream"] }
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
url = "2.3.1"
validator = { version = "0.16.0", features = ["derive"] }
