[package]
name = "bouncer"
version = "0.2.4"
edition = "2021"

[[bin]]
name = "bouncer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
clap = { version = "4.1.6", features = ["derive", "env"] }
config = "0.13.3"
digest = { version = "0.10.6", features = ["mac"] }
encoding_rs = "0.8.32"
futures = "0.3.26"
futures-util = "0.3.26"
hex = "0.4.3"
hmac = "0.12.1"
ipnetwork = "0.20.0"
log = "0.4.17"
mime = "0.3.16"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.14", features = ["stream"] }
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
url = "2.3.1"
validator = { version = "0.16.0", features = ["derive"] }
